--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   user-select: none;
 }
 .bg-img{
-  background: url('bg.jpg');
+  background: url('../image/21975.jpg');
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -271,27 +271,18 @@
 .sidebar.close .profile-details{
   width: 78px;
 }
-.sidebar .profile-details .profile-content{
-  display: flex;
-  align-items: center;
+.sidebar .profile-details .profile_name{
+  color: #fff;
+  font-size: 12pt;
+  text-align: center;
+  padding-left: 20px;
+  white-space: nowrap;
 }
-.sidebar .profile-details img{
-  height: 52px;
-  width: 52px;
-  object-fit: cover;
-  border-radius: 16px;
-  margin: 0 14px 0 12px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-}
-.sidebar.close .profile-details img{
-  padding: 10px;
-}
-.sidebar .profile-details .profile_name,
 .sidebar .profile-details .job{
   color: #fff;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 10pt;
+  text-align: center;
+  padding-left: 20px;
   white-space: nowrap;
 }
 .sidebar.close .profile-details i,
@@ -399,6 +390,21 @@
   background-color: #4169E1;
   color: #FFFFFF;
   cursor: pointer;
+}
+.headeredit{
+  font-weight: bold;
+  background-color: #4169E1;
+  color: #FFFFFF;
+  text-align: center;
+  width: 100px;
+}
+.edit{
+  text-align: center;
+}
+.edit a{
+  text-decoration: none;
+  color: #000;
+  text-align: center;
 }
 @media (max-width: 420px) {
   .sidebar.close .nav-links li .sub-menu{
