--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,21 +367,38 @@
   font-weight: bold;
   font-size: 14px;
   padding-top: 20px;
-  width: 200px;
+  width: 400px;
   height: 30px;
 }
 .namaarea{
   font-weight: bold;
   font-size: 14px;
   padding-top: 20px;
-  width: 300px;
+  width: 400px;
   height: 50px;
 }
 .formnamaarea{
   height: 50px;
 }
+.formnamaarea input{
+  width: 300px;
+  height: 40px;
+}
+.formkodearea input{
+  width: 300px;
+  height: 40px;
+}
+.formkodearea select{
+  width: 300px;
+  height: 40px;
+}
+.formnamaarea select{
+  width: 300px;
+  height: 40px;
+}
 .formdiesno input{
   width: 70px;
+  height: 40px;
 }
 .submit{
   padding-top: 30px;
